全体イメージ作成

--- a/src/styles/module/slider.module.scss
+++ b/src/styles/module/slider.module.scss
@@ -20,19 +20,19 @@
 }
 
 .slideItem_1 {
-  background-image: url('https://cdn.pixabay.com/photo/2022/11/08/21/15/cliffs-7579330_1280.jpg');
+  // background-image: url('https://cdn.pixabay.com/photo/2022/11/08/21/15/cliffs-7579330_1280.jpg');
   animation: slideItem1 20s infinite;
 }
 .slideItem_2 {
-  background-image: url('https://cdn.pixabay.com/photo/2022/04/18/04/37/mountain-7139402_960_720.jpg');
+  // background-image: url('https://cdn.pixabay.com/photo/2022/04/18/04/37/mountain-7139402_960_720.jpg');
   animation: slideItem2 20s infinite;
 }
 .slideItem_3 {
-  background-image: url('https://cdn.pixabay.com/photo/2022/10/24/09/54/switzerland-7543063_1280.jpg');
+  // background-image: url('https://cdn.pixabay.com/photo/2022/10/24/09/54/switzerland-7543063_1280.jpg');
   animation: slideItem3 20s infinite;
 }
 .slideItem_4 {
-  background-image: url('https://cdn.pixabay.com/photo/2022/03/22/02/39/beach-7084237_1280.jpg');
+  // background-image: url('https://cdn.pixabay.com/photo/2022/03/22/02/39/beach-7084237_1280.jpg');
   animation: slideItem4 20s infinite;
 }
 
