--- a/src/styles/module/visual.module.scss
+++ b/src/styles/module/visual.module.scss
@@ -1,14 +1,11 @@
 .images_pc {
-  background: url(../../images/front/pc_visual.jpg) center no-repeat;
-  background-size: cover;
+  object-fit: cover;
 }
 
 .images_tb {
-  background: url(../../images/front/tb_visual.jpg) center no-repeat;
-  background-size: cover;
+  object-fit: cover;
 }
 
 .images_sp {
-  background: url(../../images/front/sp_visual.jpg) center no-repeat;
-  background-size: cover;
+  object-fit: cover;
 }
